# Kdx

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  bootstrap.py  pyproject.toml
bench/: three_way_token_bench.py
kdx/: .gitignore  README.md
kdx/bench/: prompts_kdx_repo.txt
kdx/src/kdx/: __init__.py  __main__.py  budget.py  cli.py  codex_home.py  config.py  indexer.py  mcp_code_server.py  retrieval.py  search_service.py  token_compare.py
kdx/tests/: test_budget.py  test_codex_home.py  test_config.py  test_indexer_and_retrieval.py  test_token_compare.py  test_wrapper.py
src/kdx/: budget.py  cli.py  codex_home.py  config.py  indexer.py  keiro.py  mcp_code_server.py  mcp_search_server.py  models.py  retrieval.py  search_service.py  token_compare.py  ui.py  updates.py  wrapper.py
src/kdx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_bootstrap.py  test_budget.py  test_codex_home.py  test_indexer_and_retrieval.py  test_keiro.py  test_search_service.py  test_token_compare.py  test_ui.py  test_updates.py  test_wrapper.py
