[build-system]
requires = ["setuptools>=69,<81", "wheel>=0.43"]
build-backend = "setuptools.build_meta"

[project]
name = "kdx"
version = "0.1.0"
description = "Token-efficient Codex wrapper with repo indexing and Keiro web search"
readme = "README.md"
requires-python = ">=3.11.0,<4"
authors = [{ name = "KDX" }]
dependencies = [
  "mcp>=1.12.0",
]

[project.scripts]
kdx = "kdx.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
